--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
         </section>
 <section class="second-section">
 
+    <div class="websites">
+        <div class="website-1"><img src="logos/Alibaba.svg" alt=""></div>
+        <div class="website-2"><img src="logos/Amazon.svg" alt=""></div>
+        <div class="website-3"><img src="logos/Daraz.pk Logo.svg" alt=""></div>
+        <div class="website-4"><img src="logos/Ebay.svg" alt=""></div>
+        <div class="website-5"><img src="logos/Rakuten.svg" alt=""></div>
+        <div class="website-6"><img src="logos/Target.svg" alt=""></div>
+        <div class="website-7"><img src="logos/Walmart.svg" alt=""></div>
+    </div>
+
 </section>
 
 
