--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-2</title>
+    <!-- --font awesome-- -->
+    <script src="https://kit.fontawesome.com/7f2264e9d0.js" crossorigin="anonymous"></script>
+    <!-- --stylesheet-- -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,10 +17,11 @@
 
     </header>
     <main>
+        <!-- first-section->start -->
         <section class="first-section">
             <div class="title-info">
                 <h1>Start your Journey as<br> Influencer</h1>
-               
+
                 <p>Define your goal. Know your target audience. Set your budget and deadlines.<br> And then find social
                     media influencers who fit those criteria.</p>
                 <a class="preebook-button" href="">preebook now</a>
@@ -27,21 +31,312 @@
 
             </div>
         </section>
-<section class="second-section">
+        <!-- first-section->end -->
 
-    <div class="websites">
-        <div class="website-1"><img src="logos/Alibaba.svg" alt=""></div>
-        <div class="website-2"><img src="logos/Amazon.svg" alt=""></div>
-        <div class="website-3"><img src="logos/Daraz.pk Logo.svg" alt=""></div>
-        <div class="website-4"><img src="logos/Ebay.svg" alt=""></div>
-        <div class="website-5"><img src="logos/Rakuten.svg" alt=""></div>
-        <div class="website-6"><img src="logos/Target.svg" alt=""></div>
-        <div class="website-7"><img src="logos/Walmart.svg" alt=""></div>
-    </div>
+        <!-- second-section->start -->
+        <section class="second-section">
 
-</section>
+            <div class="websites">
+                <div class="website-1"><img src="logos/Alibaba.svg" alt=""></div>
+                <div class="website-2"><img src="logos/Amazon.svg" alt=""></div>
+                <div class="website-3"><img src="logos/Daraz.pk Logo.svg" alt=""></div>
+                <div class="website-4"><img src="logos/Ebay.svg" alt=""></div>
+                <div class="website-5"><img src="logos/Rakuten.svg" alt=""></div>
+                <div class="website-6"><img src="logos/Target.svg" alt=""></div>
+                <div class="website-7"><img src="logos/Walmart.svg" alt=""></div>
+            </div>
+
+        </section>
+        <!-- second-section->end -->
 
 
+        <!-- third-section->start -->
+        <section class="third-section">
+
+            <div class="popular-collections">
+                <h1>Popular Collection</h1>
+                <div class="collections">
+                    <div class="products">
+
+                        <div class="collection-banner">
+                            <img src="images/action.png" alt="">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">
+                                Action Camera
+                            </h3>
+                            <p class="price">$380.00</p>
+                            <div class="rating-collections">
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div>
+                                    <p class="rate">5.0</p>
+                                </div>
+
+                            </div>
+                            <div class="facilities">
+                                <p>Wordwide shifting <br> available <br>
+                                    Buyers protection possible!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products">
+
+                        <div class="collection-banner">
+                            <img src="images/airpod.png" alt="">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">
+                                Airbuds
+                            </h3>
+                            <p class="price">$100.00</p>
+                            <div class="rating-collections">
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div>
+                                    <p class="rate">5.00</p>
+                                </div>
+
+                            </div>
+                            <div class="facilities">
+                                <p>Wordwide shifting <br> available <br>
+                                    Buyers protection possible!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products">
+
+                        <div class="collection-banner">
+                            <img src="images/camera.png" alt="">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">
+                                Vlogging Camera
+                            </h3>
+                            <p class="price">$1800.80</p>
+                            <div class="rating-collections">
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div>
+                                    <p class="rate">5.00</p>
+                                </div>
+
+                            </div>
+                            <div class="facilities">
+                                <p>Wordwide shifting <br> available <br>
+                                    Buyers protection possible!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products">
+
+                        <div class="collection-banner">
+                            <img src="images/drone.png" alt="">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">
+                                Drone
+                            </h3>
+                            <p class="price">$980.25</p>
+                            <div class="rating-collections">
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div>
+                                    <p class="rate">5.00</p>
+                                </div>
+
+                            </div>
+                            <div class="facilities">
+                                <p>Wordwide shifting <br> available <br>
+                                    Buyers protection possible!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products">
+
+                        <div class="collection-banner">
+                            <img src="images/lights.png" alt="">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">
+                                Light Setup
+                            </h3>
+                            <p class="price">$1200.00</p>
+                            <div class="rating-collections">
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div>
+                                    <p class="rate">5.00</p>
+                                </div>
+
+                            </div>
+                            <div class="facilities">
+                                <p>Wordwide shifting <br> available <br>
+                                    Buyers protection possible!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products">
+
+                        <div class="collection-banner">
+                            <img src="images/mic.png" alt="">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">
+                                microphone
+                            </h3>
+                            <p class="price">$120.25</p>
+                            <div class="rating-collections">
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div>
+                                    <p class="rate">5.00</p>
+                                </div>
+
+                            </div>
+                            <div class="facilities">
+                                <p>Wordwide shifting <br> available <br>
+                                    Buyers protection possible!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products">
+
+                        <div class="collection-banner">
+                            <img src="images/setup.png" alt="">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">
+                                Photoshoot set
+                            </h3>
+                            <p class="price">$820.40</p>
+                            <div class="rating-collections">
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div>
+                                    <p class="rate">5.00</p>
+                                </div>
+
+                            </div>
+                            <div class="facilities">
+                                <p>Wordwide shifting <br> available <br>
+                                    Buyers protection possible!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products">
+
+                        <div class="collection-banner">
+                            <img src="images/single-light.png" alt="">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">
+                                Green Screen
+                            </h3>
+                            <p class="price">$25.48</p>
+                            <div class="rating-collections">
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div>
+                                    <p class="rate">5.00</p>
+                                </div>
+
+                            </div>
+                            <div class="facilities">
+                                <p>Wordwide shifting <br> available <br>
+                                    Buyers protection possible!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products">
+
+                        <div class="collection-banner">
+                            <img src="images/tripod.png" alt="">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">
+                                Flex Tripod
+                            </h3>
+                            <p class="price">$50.48</p>
+                            <div class="rating-collections">
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div>
+                                    <p class="rate">5.00</p>
+                                </div>
+
+                            </div>
+                            <div class="facilities">
+                                <p>Wordwide shifting <br> available <br>
+                                    Buyers protection possible!</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+            </div>
+            <div class="more-products">
+                <a class="seemore" href="seemore">seemore <span class="arrow"><i
+                            class="fas fa-arrow-right"></i></span></a>
+            </div>
+        </section>
+        <!-- third-section->end-->
 
     </main>
 </body>
