--- a/index.html
+++ b/index.html
@@ -338,7 +338,45 @@
         </section>
         <!-- third-section->end-->
 
+        <!-- fourth-section->start -->
+
+        <section class="fourth-section">
+            <div class="title-img">
+                <img src="images/main-camera.png" alt="">
+
+            </div>
+            <div class="title-info">
+                <h1>Featured products at one place</h1>
+
+                <p>Define your goal. Know your target audience. Set your budget and deadlines.<br> And then find social
+                    media influencers who fit those criteria.</p>
+                <a class="preebook-button" href="">preebook now</a>
+            </div>
+
+        </section>
+        <!-- fourth-section->end -->
     </main>
+
+
+    <!-- footer start -->
+    <footer>
+        <div class="footer-details">
+            <div class="footer-title">
+                <h1>Influencer products</h1>
+            </div>
+            <div class="footer-info">
+                <p>Copyright © 2020 influencer products</p>
+                <p class="writing">All rights reserved</p>
+            </div>
+        </div>
+        <div class="icons">
+            <div class="icon-1"><i class="fab fa-facebook"></i></div>
+            <div class="icon-2"><i class="fab fa-instagram"></i></div>
+            <div class="icon-3"><i class="fab fa-youtube"></i></div>
+            <div class="icon-4"><i class="fab fa-twitter"></i></div>
+        </div>
+    </footer>
+    <!-- footer end -->
 </body>
 
 </html>
